# QuickScribe

./: .env.example  .gitignore  .run.sh.swp  QuickScribe.command  README.md  audio_handler.py  audio_source.py  config_manager.py  dictate.py  dictation_app.py  gemini_models.txt  groq_models.txt  input_controller.py  input_coordinator.py  instruction_composer.py  microphone_audio_source.py  model_invocation_worker.py  output_service.py  phoneme_mapper.py  phonetic_grammar.json  probe_models.py  processing_coordinator.py  processing_session.py  pyproject.toml  pytest.ini  recording_coordinator.py  recording_session.py  requirements.txt  session_output_worker.py  transcription_service.py  vosk_audio_source.py  wav2vec2_audio_source.py
instructions/: __init__.py  core.md
lib/: __init__.py  conversation_state.py  diff_engine.py  event_queue.py  keyboard_injector_macos.py  keyboard_injector_windows.py  keyboard_injector_xdotool.py  output_manager.py  pr_log.py  sequential_processor.py  sequential_processor_streaming.py  word_stream.py  xdotool_queue.py
providers/: anthropic_mapper.py  base_provider.py  conversation_context.py  gemini_mapper.py  gemini_provider.py  groq_mapper.py  groq_provider.py  mapper_factory.py  openai_mapper.py  openrouter_mapper.py  provider_config_mapper.py  provider_factory.py
tests/: __init__.py  mock_output_manager.py  test_append_only_emission_bug.py  test_audio_validation.py  test_config_accessor_pattern.py  test_config_manager_modes.py  test_config_routing.py  test_cost_debug.py  test_cost_integration.py  test_cost_output.py  test_pr_log.py  (+37 more)
(+53 files in other folders)
