[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickscribe"
version = "0.1.0"
description = "Real-time dictation using LLM providers"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["instructions", "providers"]

[tool.setuptools.package-data]
instructions = ["*.md", "modes/*.md", "audio_sources/*.md", "providers/*.md"]
